# Course_7

./: pyproject.toml  simple_env
config/: celery.py  settings.py  urls.py
habits/: models.py  paginations.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py
